# ghread

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
app/: config.py  main.py  mcp_server.py
app/github/: client.py  fetcher.py
app/models/: responses.py
ghread_api.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_endpoints.py
