[project]
name = "ghread-api"
version = "1.0.0"
description = "A REST API HTTP proxy server that lets AI agents read GitHub repos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.4",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
